--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "nodemon": "^2.0.7"
   },
   "scripts": {
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
     "start": "node server.js"
   },
   "repository": {
